# ROCm-Device-Libs

./: .gitignore  AMDDeviceLibsConfig.cmake.in  CMakeLists.txt  LICENSE.TXT  OCL.cmake  README.md
.github/ISSUE_TEMPLATE/: issue_report.yml
cmake/: OCL.cmake  Packages.cmake
cuda2gcn/: CMakeLists.txt
cuda2gcn/src/: barrier_wrapper.ll  bitsbytes.cl  bitsbytes.ll  clock.cl  convert.cl  float.cl  generic.cl  half.cl  integer.cl  lanemask.ll  math.cl  opencuda2gcn.ll  precision.cl  reinterpret.cl  rounding.cl  smid.cl  trap.cl  trap.ll
cudamath/: CMakeLists.txt
cudamath/src/: math.cl  precision.cl
hc/src/: hc_amdgcn.ll  hc_atomic.ll  hc_kernel.cl  hc_math.cl
hip/: CMakeLists.txt
hip/src/: addrspacecast.cl  assertfail.cl  atomic_fence.cl  atomics.cpp  atomics.hip  ballot.ll  clock.cl  device_atomic_functions.cpp  device_functions.hip  hip_minimal.h  hipdrt_printf_alloc.cpp  hipdrt_printf_alloc.hip  lanemask.ll  memory.cl  nsync.ll  smid.cl  std_wrapper.hip  sync.cl  trap.ll  x_atomics.cl
irif/inc/: irif.h
irif/src/: atomic.ll  cz.ll  fence.ll  overflow.ll  reg.ll
ockl/: CMakeLists.txt
ockl/src/: add_sat.cl  cg.cl  dm.cl  dots.cl  sub_sat.cl
oclc/src/: isa_version_600.cl  isa_version_601.cl  isa_version_703.cl  isa_version_704.cl
ocml/inc/: ocml.h
ocml/src/: asinhF.cl  builtins.h  ceilD.cl  ceilF.cl  ceilH.cl  copysignD.cl  copysignF.cl  copysignH.cl  cosD.cl  cosF.cl  cosH.cl  cosbD.cl  cosbF.cl  cospiD.cl  cospiF.cl  cospiH.cl  erfF.cl  erfcinvF.cl  erfinvF.cl  expepF.cl  fabsD.cl  fabsF.cl  fabsH.cl  floorD.cl  floorF.cl  floorH.cl  fmaD.cl  fmaF.cl  fmaH.cl  fractD.cl  fractF.cl  fractH.cl  frexpD.cl  frexpF.cl  frexpH.cl  isfiniteD.cl  isfiniteF.cl  isfiniteH.cl  isinfD.cl  isinfF.cl  (+97 more)
opencl/: CMakeLists.txt
opencl/src/math/: halfmath.cl  wrapbp.cl  wraptp.cl
opencl/src/misc/: shuffle.cl
opencl/src/workgroup/: wgscratch.ll
openmp/src/: amdgcn-builtins.ll  get_ptr_as_int.ll
test/compile/: CMakeLists.txt
test/inc/: test_opencl.h
test/opencl/: test_math.cl
utils/: add_amdgiz.sed  add_cuda.sed  change-addr-space.sh  change-triple.sh  remove_amdgiz.sed  remove_cuda.sed
